# nifty-stock-analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/universe/: nifty500.csv
scripts/: download_universe.py
src/nifty_analyzer/: __init__.py  config.py  universe.py
src/nifty_analyzer/data/: __init__.py  cache.py  fetcher.py  fundamentals.py
src/nifty_analyzer/data_files/: nifty50.csv
src/nifty_analyzer/features/: __init__.py  capm.py  decision_card.py  factor_model.py  returns.py  risk.py  snapshot.py  technicals.py  valuation.py
src/nifty_analyzer/ui/: __init__.py  app.py  charts.py
tests/: conftest.py  test_capm.py  test_decision_card.py  test_factor_model.py  test_fetcher.py  test_returns.py  test_risk.py  test_technicals.py  test_universe.py  test_valuation.py
